--- a/crates/secrets-nats-kv/Cargo.toml
+++ b/crates/secrets-nats-kv/Cargo.toml
@@ -4,14 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "nats_kv_secrets"
+name = "secrets_nats_kv"
 path = "src/lib.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = { workspace = true, default-features = true }
-async-nats = { workspace = true, default-features = true }
+#async-nats = { workspace = true, default-features = true }
+async-nats = "0.35"
 bytes = { workspace = true}
 clap = { workspace = true, default-features = true, features = ["derive"] }
 futures = { workspace = true }
@@ -21,8 +22,9 @@ serde_json = {workspace = true }
 thiserror = {workspace = true }
 tokio = { workspace = true,  features = ["full"] }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
+tracing-subscriber = { workspace = true, default-features = true, features = ["env-filter"] }
 wascap = { path = "../wascap" }
+wasmcloud-secrets-types = { path = "../secrets-types" }
 
 [dev-dependencies]
 rand = {workspace = true}
