--- a/crates/secrets-types/Cargo.toml
+++ b/crates/secrets-types/Cargo.toml
@@ -11,6 +11,7 @@ repository.workspace = true
 
 [dependencies]
 anyhow = { workspace = true, default-features = true }
+async-trait = { workspace = true, default-features = true }
 bytes = { workspace = true, default-features = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, default-features = true }
